--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -10,6 +10,7 @@ when@dev:
                 path: "%kernel.logs_dir%/%kernel.environment%.log"
                 level: debug
                 channels: ["!event"]
+
             console:
                 type: console
                 process_psr_3_messages: false
@@ -24,6 +25,7 @@ when@test:
                 handler: nested
                 excluded_http_codes: [404, 405]
                 channels: ["!event"]
+
             nested:
                 type: stream
                 path: "%kernel.logs_dir%/%kernel.environment%.log"
@@ -37,17 +39,22 @@ when@prod:
                 action_level: error
                 handler: nested
                 excluded_http_codes: [404, 405]
+                path: '%kernel.logs_dir%/%kernel.environment%.log'
                 channels: ["!deprecation"]
                 buffer_size: 50 # How many messages should be saved? Prevent memory leaks
+
             nested:
                 type: stream
                 path: php://stderr
                 level: debug
                 formatter: monolog.formatter.json
+
             console:
                 type: console
                 process_psr_3_messages: false
                 channels: ["!event", "!doctrine"]
+                path: '%kernel.logs_dir%/%kernel.environment%.log'
+
             deprecation:
                 type: stream
                 channels: [deprecation]
