--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,6 +18,11 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
-
+    App\Service\NewsScraperService:
+        arguments:
+        tags: [ 'controller.service_arguments' ]
+    App\Service\AnalyzeWithPerplexity:
+        arguments:
+            $apiKey: '%env(PERPLEXITY_API_KEY)%'
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
